# perceptionML

./: MANIFEST.in  PYPI_UPLOAD.md  README.md  pyproject.toml  requirements.txt  run_pipeline.py  test_anger_zero_presence.sh  test_both_models.sh  test_both_models_sc_fixed.sh
configs/: anger_zero_presence.yaml  essay_analysis.yaml  essay_analysis_adjusted.yaml
examples/: quickstart.sh  run_all_tests.py  test_minilm_model.py  test_minilm_reddit.py  test_nvidia_model.py  test_social_class_analysis.py
for_R_users/: README_for_R_users.md  perceptionml_wrapper.py  run_perceptionml.R  setup_for_R_users.R
pipeline/: auto_config.py  auto_parameters.py  cli.py  clustering.py  code_reference_finder.py  config.py  data_exporter.py  data_exporter_readme.py  data_exporter_readme_v2.py  data_loader.py  dimensionality.py  dml_analysis.py  embeddings.py  visualization.py
pipeline/configs/: anger_zero_presence.yaml  default.yaml
pipeline/templates/: base.html.j2
pipeline/templates/components/: controls.html.j2  dml_table.html.j2  gallery_controls.html.j2  pc_global_info.html.j2  topic_stats.html.j2
pipeline/templates/js/: dml_stats.js.j2  interactions.js.j2  pca_stats.js.j2  topic_stats.js.j2  visualization.js.j2
templates/components/: controls.html.j2  text_display.html.j2
templates/js/: interactions.js.j2  pca_stats.js.j2  topic_stats.js.j2  visualization.js.j2
