[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perceptionml"
version = "0.1.0"
description = "A text embedding analysis pipeline for perception modeling"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Raymond V. Li", email = "raymond@raymondli.me"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.15.3",
    "scikit-learn==1.5.2",
    "statsmodels==0.14.4",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "transformers==4.42.4",
    "sentence-transformers==4.1.0",
    "accelerate==1.7.0",
    "safetensors==0.5.3",
    "tokenizers==0.19.1",
    "huggingface-hub==0.32.2",
    "datasets==3.6.0",
    "einops==0.8.1",
    "umap-learn==0.5.7",
    "hdbscan==0.8.40",
    "xgboost==3.0.1",
    "shap==0.43.0",
    "matplotlib==3.10.3",
    "seaborn==0.13.2",
    "jinja2==3.1.6",
    "pyyaml==6.0.2",
    "click==8.1.8",
    "tqdm==4.67.1",
]

[project.scripts]
perceptionml = "pipeline.cli:main"

[project.urls]
"Homepage" = "https://github.com/raymondli/perceptionml"
"Bug Tracker" = "https://github.com/raymondli/perceptionml/issues"

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.setuptools.package-data]
pipeline = ["templates/**/*", "templates/**/**/*", "configs/*.yaml"]